Fix side bar on mobile

--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -328,7 +328,7 @@ a {
 }
 
 .sidebar-bg {
-  background: linear-gradient(to bottom, #2e4442, #34a9b1) !important;
+  background: linear-gradient(to bottom, #2e4044, #3498b1) !important;
   background-size: cover;
 }
 
